hphp/hack/test/typecheck/namespace/namespace_aliasing4.php.exp
File "namespace_aliasing4.php", line 10, characters 12-14:
Name already bound: Dict\foo (Naming[2012])
  File "namespace_aliasing4.php", line 4, characters 12-14:
  Previous definition is here
File "namespace_aliasing4.php", line 16, characters 16-25:
Invalid argument (Typing[4110])
  File "namespace_aliasing4.php", line 20, characters 23-25:
  This is an int
  File "namespace_aliasing4.php", line 4, characters 19-24:
  It is incompatible with a string
File "namespace_aliasing4.php", line 17, characters 16-26:
Invalid argument (Typing[4110])
  File "namespace_aliasing4.php", line 20, characters 23-25:
  This is an int
  File "namespace_aliasing4.php", line 4, characters 19-24:
  It is incompatible with a string
